--- a/make/autoconf/spec.gmk.in
+++ b/make/autoconf/spec.gmk.in
@@ -447,6 +447,10 @@ endif
 X_CFLAGS:=@X_CFLAGS@
 X_LIBS:=@X_LIBS@
 
+# Necessary additional compiler flags to compile dbus
+DBUS_CFLAGS := @DBUS_CFLAGS@
+DBUS_FOUND := @DBUS_FOUND@
+
 # Linux speechd a11y announcer
 A11Y_SPEECHD_ANNOUNCING_ENABLED:=@A11Y_SPEECHD_ANNOUNCING_ENABLED@
 SPEECHD_CFLAGS:=@SPEECHD_CFLAGS@
