--- a/make/autoconf/spec.gmk.template
+++ b/make/autoconf/spec.gmk.template
@@ -470,6 +470,7 @@ X_LIBS := @X_LIBS@
 
 # Necessary additional compiler flags to compile dbus
 DBUS_CFLAGS := @DBUS_CFLAGS@
+DBUS_FOUND := @DBUS_FOUND@
 
 # Linux speechd a11y announcer
 A11Y_SPEECHD_ANNOUNCING_ENABLED:=@A11Y_SPEECHD_ANNOUNCING_ENABLED@
